# musicdb

./: .gitignore  README.md  setup.sh
.github/workflows/: rust.yml
musicdb-client/: Cargo.toml  Cross.toml  sleep_timer.mers
musicdb-client/mers/: cli.mers  log.mers
musicdb-client/src/: config_gui.toml  gui.rs  gui_anim.rs  gui_base.rs  gui_edit.rs  gui_edit_song.rs  gui_idle_display.rs  gui_library.rs  gui_notif.rs  gui_playback.rs  gui_playpause.rs  gui_queue.rs  gui_screen.rs  gui_settings.rs  gui_song_adder.rs  gui_statusbar.rs  gui_text.rs  gui_wrappers.rs  main.rs  merscfg.rs  textcfg.rs
musicdb-filldb/: Cargo.toml  dbfile
musicdb-filldb/src/: main.rs
musicdb-find_and_add_missing_songs/: Cargo.toml  missing_songs.txt  test.mers
musicdb-find_and_add_missing_songs/src/: main.rs
musicdb-lib/: Cargo.toml
musicdb-lib/src/: lib.rs  test.rs
musicdb-lib/src/data/: album.rs  artist.rs  cache_manager.rs  database.rs  mod.rs  queue.rs  song.rs
musicdb-lib/src/load/: mod.rs
musicdb-lib/src/player/: mod.rs  playback_rs.rs  rodio.rs  sleep.rs
musicdb-lib/src/server/: get.rs  mod.rs  simple.rs
musicdb-mers/: Cargo.toml
musicdb-mers/src/: lib.rs
musicdb-remove-duplicates-from-queue/: Cargo.toml
musicdb-remove-duplicates-from-queue/src/: main.rs
musicdb-server/: Cargo.toml  Cross.toml
musicdb-server/assets/: album-view.html  albums_one.html  artist-view.html  artists.html  artists_one.html  queue.html  queue_folder.html  queue_folder_current.html  queue_loop.html  queue_loop_current.html  queue_loopinf.html  queue_loopinf_current.html  queue_random.html  queue_random_current.html  queue_shuffle.html  queue_shuffle_current.html  queue_song.html  queue_song_current.html  root.html  songs_one.html
musicdb-server/src/: main.rs  web.rs
