[package]
name = "musicdb-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
colorize = "0.1.0"
playback-rs = { version = "0.4.3", optional = true }
rand = "0.8.5"
rc-u8-reader = "2.0.16"
rodio = { version = "0.18.0", optional = true }
sysinfo = "0.30.12"

[features]
default = ["playback"]
playback = ["playback-via-playback-rs"]
playback-via-playback-rs = ["dep:playback-rs"]
playback-via-rodio = ["dep:rodio"]
