[package]
name = "musicdb-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
colorize = "0.1.0"
playback-rs = { version = "0.4.4", optional = true }
rand = "0.8.5"
rc-u8-reader = "2.0.16"
rodio = { version = "0.20.1", optional = true }
sysinfo = "0.30.12"

[features]
default = []
playback = []
default-playback = ["playback-via-playback-rs"]
# default-playback = ["playback-via-rodio"]
playback-via-sleep = ["playback"]
playback-via-playback-rs = ["playback", "dep:playback-rs"]
playback-via-rodio = ["playback", "dep:rodio"]
