[package]
name = "musicdb-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
musicdb-lib = { path = "../musicdb-lib", features = ["playback"] }
clap = { version = "4.4.6", features = ["derive"] }
headers = "0.3.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37.0", optional = true, features = ["rt"] }
rocket = { version = "0.5.0", optional = true }
html-escape = { version = "0.2.13", optional = true }

[features]
default = ["website"]
website = ["dep:tokio", "dep:rocket", "dep:html-escape"]
